	original functionality replaced with rm comb/obj* comb/comb1 ... syntax [deprecated 7.26]
find
	functionality specified in man page replaced by search -above=1 -name * [deprecated 7.26]
em
	replaced by search -attr MUVES_Component=<val1> -or -attr MUVES_Component=<val2>
	and iterating over the saved search results (see search man page.) [deprecated 7.26]

7.24
----
fbed, pp-fb
	removes termcap use, no known users [deprecated 7.24]
include/raytrace librt
	db_full_path_list_add(), db_free_full_path_list() [deprecated 7.24]
	db_search_formplan(), db_search_freeplan(), db_search_full_paths() [deprecated 7.24]
	db_search_unique_objects(), struct db_full_path_list [deprecated 7.24]
src/irprep
	all_sf, firpass, ir-X, irdisp, pictx, secpass, shapefact, showterm [deprecated 7.24]
include/raytrace.h librt
	RT_DBHASH and RT_DBNHASH [deprecated 7.24]

7.22
----
include/raytrace.h librt
	nmg_model_break_e_on_v -> nmg_break_e_on_v [deprecation 7.22]
	RT_GET_TREE -> BU_GET [deprecation 7.22]
	RT_FREE_TREE -> BU_PUT [deprecation 7.22]
include/bu.h
	bu_parse_mm() [deprecated 7.22]
librtserver
	becoming stand-alone project, removes optional java dependency [deprecated 7.22]
mged
	em, e_muves, l_muves, lm, read_muves, and t_muves MUVES-specific commands [deprecated 7.22]

7.20
----
tclscripts/lib
	Mged, Database, Db, Dm, Drawable, Display, QuadDisplay, View -> Ged [deprecated 7.20]
librt
	bspline primitive [deprecated 7.20]
	poly primitive [deprecated 7.20]
	hf primitive [deprecated 7.20]
include/bu.h
	bu_vls_init_if_uninit() -> bu_vls_init() [deprecated 7.20]
GNU Autotools configure compatibility script
	./configure -> cmake . [deprecated 7.20]
include/raytrace.h
	rt_load_attrs() -> rt_gettrees_and_attrs() or db5_import_attributs() [deprecated 7.20]
	db_regexp_match() -> !bu_fnmatch() [deprecated 7.20]

7.18
----
include/raytrace.h rt_comb_internal members
	region_id -> region_id attribute [deprecated 7.18]
	aircode -> air attribute [deprecated 7.18]